# code-snippets-app

./: .gitignore  Doxyfile  LICENSE  Makefile  README.md  main  main.cpp
desktop_app/: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  addsnippetwindow.cpp  addsnippetwindow.h  addsnippetwindow.ui  main  main.pro  mainwindow.cpp  mainwindow.h
desktop_app/server/lib/qhttpengine/src/: qhttpengine.pc
desktop_app/server/src/: apihandler.h  main.cpp  snippet.cpp  snippet.h  unsupported_language_exception.h
desktop_app/server/src/tests/: snippettest.h  test.pro
desktop_app/src/: CMakeLists.txt  example.cpp  main.cpp
desktop_app/src/communication/: worker.cpp  worker.h
desktop_app/src/model/: invalid_snippet_json_exception.cpp  invalid_snippet_json_exception.h  snippet.h  too_long_content_exception.cpp  unsupported_language_exception.cpp
desktop_app/src/presenter/: addsnippetwindow.cpp  addsnippetwindow.h  mainwindow.cpp  mainwindow.h  parent_window.h
desktop_app/src/view/: addsnippetwindow.ui  mainwindow.ui
desktop_app/test/: test.cpp
desktop_app/tests/: CMakeLists.txt  Test  test.cpp
server/: CMakeLists.txt  readme.md
server/database/: setup.sql  snippet_db.db  unix-setup.sh  windows-setup.bat
server/lib/qhttpengine/: CMakeLists.txt
server/lib/qhttpengine/src/: CMakeLists.txt  qhttpengine.pc
server/src/: CMakeLists.txt  apihandler.cpp  apihandler.h  cpp-logic.cpp  database_error_exception.cpp  database_error_exception.h  invalid_get_request_body_exception.cpp  invalid_get_request_body_exception.h  invalid_snippet_json_exception.cpp  invalid_snippet_json_exception.h  main.cpp  path_file.txt  query_not_performed_exception.cpp  query_not_performed_exception.h  repository_not_initialized_exception.cpp  repository_not_initialized_exception.h  server.pro  server.py  snippet.cpp  snippet.h  snippet_db.db  snippet_repository_concrete.cpp  snippet_repository_concrete.h  snippet_repository_interface.h  snippet_search_pattern.cpp  snippet_search_pattern.h  too_long_content_exception.cpp  too_long_content_exception.h  unsupported_language_exception.h  windows-after-build-setup.bat
server/src/tests/: CMakeLists.txt  moc_apihandler.cpp  moc_snippet.cpp  moc_snippettest.cpp  snippet_db.db  snippet_repository_concrete_test.cpp  snippet_repository_concrete_test.h  snippettest.cpp  test  test.cpp  tests.pro
